k8s_manifests/backend-rails-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: backend-rails-deployment
  labels: 
    component: backend-rails

spec:
  replicas: 2
  selector:
    matchLabels:
      component: backend-rails

  template:
    metadata:
      labels:
        component: backend-rails
        
    spec:
      containers:
        - name: backend
          image: frelaxy/app:latest
          ports:
          - containerPort: 3000
          resources:
            requests:
              memory: 256Mi
              cpu: 50m
