k8s_manifests/backend-rails-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: backend-rails-service

spec:
  selector:
    component: backend-rails
  type: ClusterIP
  ports:
   - port: 3000
     targetPort: 3000
