k8s_manifests/ingress-backend-rails.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: backend-rails-ingress

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-rails-service
                port:
                  number: 3000
